<resources>
    <string name="app_name">protokoll</string>
    <string name="lbldate">lblDate</string>
    <string name="lblDate" />
    <string name="datum">Datum</string>
    <string name="lblKm">Kilometer</string>
    <string name="km">Kilometer</string>
    <string name="lblKfz">Kennzeichen</string>
    <string name="kfz">Kennzeichen</string>
    <string name="lblTimeOfDay" />
    <string name="tageszeit">Tageszeit</string>
    <string name="lblRoute" />
    <string name="route">Fahrstrecke/-ziel</string>
    <string name="lblStreetCondition" />
    <string name="streetCondition">Straßenzustand, Witterung</string>
    <string name="add">Hinzufügen</string>
    <string name="save">Save</string>
    <string name="signature_begleiter">Signature Begleiter</string>
    <string name="signature_bewerber">Signature Bewerber</string>

    <string name="log_item_format">%1\$s — %2\$s km — %3\$s km — %4\$s — %5\$s — %6\$s — %7\$s</string>


    <string-array name="timeOfDay">
        <item>Morgen</item>
        <item>Mittag</item>
        <item>Abend</item>
        <item>Nacht</item>
    </string-array>
</resources>


